assets/css/style.css
/* Fonts */
@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=IM+Fell+Great+Primer+SC&family=IM+Fell+Great+Primer:ital@0;1&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&family=Satisfy&display=swap");

/* Reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Body */
body {
  background-color: rgba(0, 0, 0, 0.5);
  background-image: linear-gradient(
      90deg,
      transparent 50%,
      rgba(238, 10, 10, 0.04) 50%
    ),
    linear-gradient(90deg, transparent 50%, rgba(230, 0, 0, 0.04) 50%),
    linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4));
  background-size: 50px 50px, 100px 100px, 100% 100%;
  background-position: 50% 50%, 0 0, 0 0;
  font-family: "IM Fell Great Primer SC", sans-serif;
  margin: 0px;
  width: 100%;
  overflow-x: hidden;
}

main {
  flex: 1 0 auto;
}

section {
  position: relative;
  text-align: center;
}

/* header */
header {
  position: fixed;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: linear-gradient(to bottom, #f7efdb, #e2d5b7 60%, #c9b084);
  padding: 1rem 1rem;
  width: 100%;
  z-index: 99;
}

#heading {
  font-size: 2.5rem;
  text-align: center;
  color: #b1454a;
  padding-top: 80px;
  z-index: -3;
}

#logo-svg {
  width: 2rem;
  height: 2rem;
  fill: #b1454a;
}

nav {
  position: absolute;
  top: 6vh;
  background-color: #c9b084;
  width: 100%;
  left: 0;
  right: 0;
  height: 12vh;
  padding: 1rem 1rem;
  box-shadow: 0 2px 2px #3a3a3a;
  display: none;
  text-decoration: none;
  z-index: 1;
}

nav a {
  text-decoration: none;
  color: #b1454a;
  z-index: 1;
}

nav li {
  list-style-type: none;
  justify-content: center;
  padding-top: 5px;
  z-index: 1;
}

/* background image */
.background-img {
  transition: all 0.9s;
  position: absolute;
  background-image: url("../images/images_desktop/VELI-1.webp");
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
  object-fit: contain;
  height: 100vh;
  width: 100%;
  opacity: 3;
  z-index: -1;
}

.background-img:hover {
  opacity: 0.5;
  transform: scale(1.05);
}

/* Hamburger Menu Icon */
label[for="menu-toggle"] {
  display: none;
  cursor: pointer;
  font-size: 50px;
  position: absolute;
  top: 10px;
  right: 5px;
  height: 2.5rem;
  color: #b1454a;
}

#menu-toggle:checked + #menu-icon {
  transform: rotate(90deg);
}

#menu-toggle:checked ~ #nav-menu {
  display: block;
}

#menu-icon {
  display: none;
}

#menu-toggle {
  display: none; /* Hide the actual checkbox */
}

#menu-icon {
  cursor: pointer;
  font-size: 30px;
  display: block;
}

/* Quotes Stylings */

.quote {
  position: relative;
  font-family: "IM Fell Great Primer SC", sans-serif;
  font-size: 1rem;
  align-content: center;
  display: flex;
  justify-content: center;
  background: rgba(0, 0, 0, 0.5);
  color: #fff;
  position: relative;
  transform: scale(0.5rem);
  transition: all 1s ease-out;
  top: 4rem;
  word-spacing: 2px;
  padding: 1rem;
  width: 100%;
}

#quote2 {
  top: 65rem;
}

#quote3 {
  top: 75rem;
}

#quote4 {
  word-spacing: 2px;
  top: 6rem;
}

/* Biography page hero img */

.biography-hero-image {
  position: relative;
  top: 2rem;
  z-index: -1;
  overflow: hidden;
}

.biography-hero-image img {
  width: 100%;
  border-bottom-left-radius: 5%;
  border-bottom-right-radius: 5%;
  transition: all 0.9s;
}

/* Dates */
.dates {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  text-align: center;
  margin-top: 5rem;
  padding-bottom: 1rem;
  transition: all 1s;
  box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
  border-radius: 10px;
}

.born,
.died {
  font-size: 10px;
  transition: all 0.5s;
}

.date {
  font-size: 28px;
  font-weight: bold;
  margin-bottom: 5px;
  transition: all 0.9s;
}

.separator {
  display: block;
  width: 50%;
  font-size: large;
}

.location {
  font-size: 18px;
  font-style: italic;
  margin-bottom: 10px;
  transition: all 1.5s;
}

/* Biography Styles */
.biography-section {
  position: relative;
  top: 3rem;
  width: 100%;
  padding: 1rem;
  font-family: "IM Fell Great Primer SC", sans-serif;
  background-color: #cfccc1de;
  box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
}

.biography-title {
  text-align: center;
  font-size: 28px;
  margin-bottom: 1rem;
  color: #5a4e42;
}

.biography-content {
  align-self: center;
  width: 90%;
  max-height: 305rem;
  margin: 0 auto;
  text-align: justify;
  line-height: 1.5;
  color: #181614;
}

.biography-content h2 {
  font-size: 20px;
  margin-bottom: 10px;
}

/* explore-more button */
.explore-more {
  position: absolute;
  top: 45rem;
  left: 50%;
  transform: translateX(-50%);
  transition: all 0.9s;
  background-color: #b1454a;
  color: #fff;
  text-decoration: none;
  padding: 10px 20px;
  border-radius: 5px;
  border: 2px solid #fff;
  font-family: "IM Fell Great Primer SC", sans-serif;
  font-size: 18px;
  transition: 0.3s;
  z-index: 1;
}

.explore-more:hover {
  background-color: #fff;
  color: #8c7851;
  border: 2px solid #8c7851;
}

/* Youtube video */
iframe {
  position: relative;
  top: 70rem;
  left: 0;
  width: 100%;
  height: 40vh;
  box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
  z-index: 1;
}

/* Literary Works */
.literary-works {
  position: relative;
  display: block;
  top: 78rem;
  width: 100%;
  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
  background-color: rgba(0, 0, 0, 0.5);
  background-color: #f9f4e0;
  transition: all 0.5s;
  z-index: -1;
}

.literary-title {
  text-align: center;
  font-size: 28px;
  margin-bottom: 0.5rem;
  color: #5a4e42;
}

.works-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 3rem auto;
}

.work {
  width: 30%;
  text-align: center;
  margin: 1rem;
}

.work img {
  max-width: 25vw;
  height: auto;
  display: block;
  margin: 0 auto;
}

.work h2 {
  font-size: 20px;
  margin-top: 10px;
}

.work a {
  color: #b1454a;
}

/* Invitation Text */
.invitation-text {
  position: relative;
  text-align: center;
  font-family: "IM Fell Great Primer SC", sans-serif;
  font-size: 25px;
  color: #ffffff;
  padding: 50px;
  top: 5rem;
  border-radius: 10px;
  background: rgba(0, 0, 0, 0.3);
}

.invitation-text strong {
  color: #b1454a;
}

.invitation-text h2 {
  padding: 20px;
}

/* Signup Container */
.signup-container {
  position: relative;
  top: 10rem;
  width: 80%;
  max-width: 600px;
  margin: 0 auto;
  padding: 30px;
  background-color: #f7efdb;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
  text-align: center;
  font-family: "IM Fell Great Primer SC", sans-serif;
  color: #3a3a3a;
  box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
  border-radius: 10px;
}

/* Join Us Heading */
.signup-container h1 {
  font-size: 2rem;
  margin-bottom: 15px;
  color: #b1454a;
  transition: all 0.8s;
}

/* Signup Description */
.signup-container p {
  font-size: 1rem;
  margin-top: 50px;
  margin-bottom: 25px;
  transition: all 0.8s;
}

/* Signup Form */
.signup-form {
  display: grid;
  gap: 15px;
  transition: all 0.8s;
}

/* Form Labels */
.signup-form label {
  font-size: 0.9rem;
  transition: all 0.8s;
}

/* Form Inputs */
.signup-form input {
  width: 100%;
  padding: 10px;
  border: 2px solid #c9b084;
  background: #e2d5b7;
  font-size: 0.9rem;
  border-radius: 10px;
  text-align: center;
}

/* Submit Button */
.signup-form button {
  margin-top: 50px;
  padding: 10px 20px;
  background-color: #b1454a;
  border: none;
  color: #ffffff;
  font-size: 1rem;
  cursor: pointer;
  transition: background-color 0.3s;
  border-radius: 8px;
  transition: all 0.8s;
}

.signup-form button:hover {
  background-color: #903a35;
  transition: all 0.8s;
}

/* Map Container */
.map-container {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 20px 0;
  padding: 20px;
}

.map-container iframe {
  top: 10rem;
  border: 2px solid #b1454a;
  box-shadow: 0px 0px 10px rgba(236, 23, 23, 0.658);
  border-radius: 10px;
}

/* Footer Styles */
#site-footer {
  list-style-type: none;
  color: #b33a3a;
  padding: 5px 0;
  text-align: center;
  word-spacing: 20px;
  position: relative;
  left: 0;
  width: 100vw;
  z-index: 1;
}

#site-footer-bio {
  list-style-type: none;
  color: #b33a3a;
  padding: 5px 0;
  text-align: center;
  word-spacing: 20px;
  position: relative;
  left: 0;
  width: 100%;
  z-index: 1;
}

#site-footer-signup {
  list-style-type: none;
  color: #b33a3a;
  padding: 5px 0;
  text-align: center;
  word-spacing: 20px;
  position: relative;
  left: 0;
  width: 100%;
  z-index: 1;
}

.footer-link {
  list-style-type: none;
  text-decoration: none;
  color: #5e3939;
}

#site-footer li {
  font-size: 170%;
  padding: 0.5rem;
}

#site-footer-bio li {
  font-size: 170%;
  padding: 0.5rem;
}

#site-footer-signup li {
  font-size: 170%;
  padding: 0.5rem;
}

#site-footer {
  list-style-type: none;
  background: linear-gradient(to bottom, #f7efdb, #e2d5b7 60%, #c9b084);
  box-shadow: #b1454a;
  top: 85rem;
}

#site-footer-bio {
  list-style-type: none;
  background: linear-gradient(to bottom, #f7efdb, #e2d5b7 60%, #c9b084);
  box-shadow: #b1454a;
  top: 5rem;
}

#site-footer-signup {
  list-style-type: none;
  background: linear-gradient(to bottom, #f7efdb, #e2d5b7 60%, #c9b084);
  box-shadow: #b1454a;
  top: 10rem;
}

/* Media Queries: Tablet */
@media (min-width: 768px) {
  #menu-icon {
    cursor: pointer;
    font-size: 30px;
    display: block;
  }

  header {
    margin: 0;
    left: 0;
    right: 0;
  }

  #heading {
    position: relative;
    top: 4rem;
    font-size: 6rem;
    width: 100vw;
    text-align: center;
    color: #b1454a;
    padding-top: 10px;
  }

  .heading-container {
    display: flex;
    justify-content: center;
  }

  .background-img {
    top: 20rem;
  }

  #quote1 {
    display: flex;
    justify-content: center;
    top: 5rem;
    width: 100vw;
  }

  .biography-hero-image {
    width: 80vw;
    height: 60vh;
    padding-left: 175px;
  }

  #quote4 {
    top: 7rem;
  }

  iframe {
    width: 80%;
    height: 50vh;
  }
}

/* Laptop and upwards */
@media (min-width: 992px) {
  header {
    padding: 0.8rem 2rem;
    margin: 0;
    width: 100vw;
  }

  nav {
    display: flex;
    justify-content: center;
    height: 5vh;
    position: relative;
    top: 0;
    background: none;
    box-shadow: none;
  }

  nav li {
    display: inline-block;
    margin: 0 15px;
  }

  #menu-icon {
    display: none;
  }

  #quote2 {
    top: 68rem;
  }

  #quote4 {
    top: 10rem;
  }

  .biography-hero-image {
    width: 80vw;
    height: 60vh;
    padding-left: 175px;
  }

  iframe {
    width: 80%;
    height: 70vh;
  }

  .literary-works {
    top: 90rem;
  }

  .separator {
    font-size: 50px;
  }

  .dates {
    top: 3rem;
    left: 5%;
    width: 80%;
    margin-top: 1px;
  }

  .biography-section {
    top: 10rem;
  }

  .biography-section,
  .literary-works {
    background-size: 40px 40px;
    padding: 2rem 2rem;
  }

  .signup-container {
    position: relative;
    top: 20rem;
    right: 26vw;
    width: 50%;
  }

  .map-container {
    top: 10rem;
    width: 50%;
  }

  .map-container iframe {
    position: relative;
    left: 110%;
    top: -27.5rem;
    width: 90%;
    height: 61vh;
  }

  #site-footer {
    top: 100rem;
  }

  #site-footer-bio {
    top: 12rem;
  }

  #site-footer-signup {
    top: 5rem;
  }
}

